# test_read

./: mkdocs.yml  pyproject.toml
docs/: API.md  index.md  requirements.txt
my_package/: __init__.py
