[tool.poetry]
name = "test_read"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wheel = "*"
setuptools = "*"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
mkdocs-material = "^7.0.6"
pymdown-extensions = "^8.1.1"
mkdocstrings = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
